<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_currency"
            android:title="@string/currency" />
        <item
            android:id="@+id/nav_length"
            android:title="@string/length" />
        <item
            android:id="@+id/nav_weight"
            android:title="@string/weight" />
        <item
            android:id="@+id/nav_temp"
            android:title="@string/temperature" />
        <item
            android:id="@+id/nav_area"
            android:title="@string/area" />
        <item
            android:id="@+id/nav_speed"
            android:title="@string/speed" />
        <item
            android:id="@+id/nav_vol"
            android:title="@string/volume" />
    </group>
</menu>